14-Nov Updates: - implemented transactions for database
