# docs/swagger.json
@@ -59,8 +59,58 @@
                 }
             }
         },
+        "/addRoutine": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Create Routine delivery order.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Order Management"
+                ],
+                "summary": "Add Routine.",
+                "parameters": [
+                    {
+                        "description": "Add Routine Parameters",
+                        "name": "parameters",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.AddRoutineDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/orderManagement.AddRoutineResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.FailResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/cancelDeliveryOrder": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Update Non Started Delivery Order .",
                 "consumes": [
                     "application/json"
@@ -79,7 +129,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.CancelDeliveryOrderDTO"
+                            "$ref": "#/definitions/dto.CancelDeliveryOrderDTO"
                         }
                     }
                 ],
@@ -483,7 +533,7 @@
         },
         "/testOW1": {
             "get": {
-                "description": "Get the response of OW2 (Server notify any of created order status changed).",
+                "description": "Get the response of OW1 (Server notify any of created order status changed).",
                 "consumes": [
                     "*/*"
                 ],
@@ -493,7 +543,16 @@
                 "tags": [
                     "Test"
                 ],
-                "summary": "Test OW2 websocket response.",
+                "summary": "Test OW1 websocket response.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Processing Status",
+                        "name": "processingStatus",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -645,6 +704,66 @@
                 }
             }
         },
+        "dto.AddRoutineDTO": {
+            "type": "object",
+            "properties": {
+                "destinationLocationId": {
+                    "type": "integer"
+                },
+                "destinationLocationName": {
+                    "type": "string"
+                },
+                "expectedDeliveryTime": {
+                    "type": "string"
+                },
+                "expectedStartTime": {
+                    "type": "string"
+                },
+                "numberOfAmrRequire": {
+                    "type": "integer"
+                },
+                "orderType": {
+                    "type": "string"
+                },
+                "routinePattern": {
+                    "type": "object",
+                    "properties": {
+                        "day": {
+                            "type": "array",
+                            "items": {
+                                "type": "integer"
+                            }
+                        },
+                        "month": {
+                            "type": "array",
+                            "items": {
+                                "type": "integer"
+                            }
+                        },
+                        "week": {
+                            "type": "array",
+                            "items": {
+                                "type": "integer"
+                            }
+                        }
+                    }
+                },
+                "startLocationId": {
+                    "type": "integer"
+                },
+                "startLocationName": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.CancelDeliveryOrderDTO": {
+            "type": "object",
+            "properties": {
+                "scheduleId": {
+                    "type": "integer"
+                }
+            }
+        },
         "dto.LoginAdminDTO": {
             "type": "object",
             "properties": {
@@ -728,14 +847,6 @@
                 }
             }
         },
-        "handlers.CancelDeliveryOrderDTO": {
-            "type": "object",
-            "properties": {
-                "scheduleId": {
-                    "type": "integer"
-                }
-            }
-        },
         "loginAuth.LoginResponse": {
             "type": "object",
             "properties": {
@@ -759,10 +870,10 @@
                 "dutyLocationName": {
                     "type": "string"
                 },
-                "loginDateTime": {
+                "loginTime": {
                     "type": "string"
                 },
-                "tokenExpiryDateTime": {
+                "tokenExpiryTime": {
                     "type": "string"
                 },
                 "userId": {
@@ -891,6 +1002,17 @@
                 }
             }
         },
+        "orderManagement.AddRoutineResponse": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "$ref": "#/definitions/orderManagement.RoutineOrderListBody"
+                },
+                "header": {
+                    "$ref": "#/definitions/models.ResponseHeader"
+                }
+            }
+        },
         "orderManagement.CancelDeliveryOrderResponse": {
             "type": "object",
             "properties": {
@@ -979,6 +1101,81 @@
                     "type": "array",
                     "items": {
                         "type": "string"
+                    }
+                }
+            }
+        },
+        "orderManagement.RoutineOrderListBody": {
+            "type": "object",
+            "properties": {
+                "routine": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "properties": {
+                            "destinationLocationId": {
+                                "type": "integer"
+                            },
+                            "destinationLocationName": {
+                                "type": "string"
+                            },
+                            "expectedDeliveryTime": {
+                                "type": "string"
+                            },
+                            "expectedStartTime": {
+                                "type": "string"
+                            },
+                            "isActive": {
+                                "type": "boolean"
+                            },
+                            "nextDeliveryDate": {
+                                "type": "string"
+                            },
+                            "numberOfAmrRequire": {
+                                "type": "integer"
+                            },
+                            "orderType": {
+                                "type": "string"
+                            },
+                            "routineCreatedBy": {
+                                "type": "integer"
+                            },
+                            "routineId": {
+                                "type": "integer"
+                            },
+                            "routinePattern": {
+                                "$ref": "#/definitions/orderManagement.RoutinePattern"
+                            },
+                            "startLocationId": {
+                                "type": "integer"
+                            },
+                            "startLocationName": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "orderManagement.RoutinePattern": {
+            "type": "object",
+            "properties": {
+                "day": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "month": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "week": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
                     }
                 }
             }
