# models/orderManagement/routinePattern.go
@@ -1,0 +1,7 @@
+package orderManagement
+
+type RoutinePattern struct {
+	Day   []int `json:"day"`
+	Month []int `json:"month"`
+	Week  []int `json:"week"`
+}
